<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_projects"
        style="@style/Widget.Kp.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kp_projects_label"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_rapport"
        style="@style/Widget.Kp.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kp_rapport"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_operation_cpte"
        style="@style/Widget.Kp.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kp_operation_cpte"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_etat_besoin"
        style="@style/Widget.Kp.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kp_etat_besoin"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_dashboard"
        style="@style/Widget.Kp.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kp_dashboard"/>

</merge>