<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/text_description_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Modifier le detail"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:textColor="@color/textColorPrimary"
                android:textAppearance="?textAppearanceHeadline6"
                android:layout_marginBottom="5dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_libelle_modifier_detail_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_libelle_modifier_detail_besoin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textAppearance="?textAppearanceBody2"
                    android:textColor="@color/textColorPrimary"
                    android:hint="@string/kp_libelle__ajouter_detail_besoin"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_qte_modifier_detail_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_qte_modifier_detail_besoin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:inputType="numberDecimal"
                    android:textAppearance="?textAppearanceBody2"
                    android:hint="@string/kp_qte_ajouter_detail"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_pu_modifier_detail_besoin_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_pu_modifier_detail_besoin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:gravity="center_vertical"
                    android:textAppearance="?textAppearanceBody2"
                    android:hint="@string/kp_pu_ajouter_detail_besoin"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_submit_modifier_details"
                style="@style/Widget.Kp.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ok"
                android:layout_gravity="right"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>