<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment_Menu.Fill_Projects.ProjectFagment.Nouveau_Projet">

<!--    <LinearLayout-->
<!--        android:id="@+id/bar_top"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->

<!--        <include layout="@layout/kp_tool_bar"/>-->

<!--    </LinearLayout>-->

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/app_bar_project"
            style="@style/Widget.Kp.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:paddingStart="12dp"
            android:paddingRight="12dp"
            android:paddingEnd="12dp"
            android:paddingLeft="12dp"
            app:contentInsetStart="0dp"
            app:navigationIcon="@drawable/ic_baseline_clear_24"
            app:title="@string/app_name"
            app:titleTextColor="@color/white"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView_nouveau_projet"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/linear"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_descriptions_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/edit_new_descriptions_projets"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:lines="8"
                        android:minLines="6"
                        android:gravity="top|left"
                        android:scrollbars="vertical"
                        android:textAppearance="?textAppearanceBody2"
                        android:textColor="@color/textColorPrimary"
                        android:hint="@string/kp_descriptions_projet"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/projet_supervisor_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_projet_supervisor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/kp_supervisor_projet"
                        android:textAppearance="?textAppearanceBody2"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/projet_lieu_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_projet_lieu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/kp_lieu_projet"
                        android:inputType="text"
                        android:textAppearance="?textAppearanceBody2"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/spinner_compte_projet"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/projet_debut_date_input"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_weight="9"
                        android:layout_height="match_parent"
                        android:layout_marginRight="2dp"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_projet_debut_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="2dp"
                            android:inputType="text"
                            android:hint="@string/kp_datedebut_projet"
                            android:textAppearance="?textAppearanceBody2"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageView
                        android:id="@+id/text_debut_nouveau_projet"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_baseline_date_range_24"
                        android:layout_height="match_parent"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/projet_fin_date_input"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_weight="8"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_projet_fin_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="2dp"
                            android:inputType="text"
                            android:hint="@string/kp_datefin_projet"
                            android:textAppearance="?textAppearanceBody2"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageView
                        android:id="@+id/text_fin_nouveau_projet"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_baseline_date_range_24"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="right">

                    <TextView
                        android:id="@+id/ajouter_nouveau_ligne"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="Clique ici pour ajouter les lignes"
                        android:textAppearance="?textAppearanceBody2"
                        android:textColor="@color/textColorPrimary"
                        android:textStyle="italic"
                        android:gravity="center"/>

                    <View
                        android:background="@color/textColorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                </LinearLayout>

            </LinearLayout>

            <ListView
                android:id="@+id/listView_nouveau_ligne"
                android:layout_below="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="300dp"/>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>