<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment_Menu.All_Controleur.OperationControle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/bar_top_operation_controle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/app_bar_operation_controle"
                style="@style/Widget.Kp.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:paddingStart="12dp"
                android:paddingRight="12dp"
                android:paddingEnd="12dp"
                android:paddingLeft="12dp"
                app:contentInsetStart="0dp"
                app:navigationIcon="@drawable/ic_baseline_clear_24"
                app:title="@string/app_name"
                app:titleTextColor="@color/white"/>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView_date_operation_controle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/kp_data_operation"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:textColor="@color/textColorPrimary"
                android:textAppearance="?textAppearanceBody2"/>

            <LinearLayout
                android:id="@+id/linear_debit_operation_controle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:text="Débit"
                    android:textAppearance="?textAppearanceBody2"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:textColor="@color/textColorPrimary"
                    android:textStyle="bold"/>

                <Spinner
                    android:id="@+id/spinner_compte_debit_operation_controle"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_credit_operation_controle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:text="Crédit"
                    android:textAppearance="?textAppearanceBody2"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:textColor="@color/textColorPrimary"
                    android:textStyle="bold"/>

                <Spinner
                    android:id="@+id/spinner_compte_credit_operation_controle"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_libelle_operation_controle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/kp_libelle_payement"
                    android:textAppearance="?textAppearanceBody2"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/montant_operation_controle_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_montant_operation_controle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/kp_payement_montant"
                    android:textAppearance="?textAppearanceBody2"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminate="true"
        android:progress="80"
        android:max="100"
        android:visibility="invisible"
        android:id="@+id/progress_bar_operation_controle"
        android:progressDrawable="@drawable/circle_proresbar"/>

</RelativeLayout>